--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,11 @@ services:
       - MOD_AUTO_SHARE_DIRECTORIES=${MOD_AUTO_SHARE_DIRECTORIES}
       - MOD_FIX_KAD_GRAPH_ENABLED=${MOD_FIX_KAD_GRAPH_ENABLED}
     ports:
-      - "4711:4711" # web ui
-      - "4712:4712" # remote gui, webserver, cmd ...
-      - "4662:4662" # ed2k tcp
-      - "4665:4665/udp" # ed2k global search udp (tcp port +3)
-      - "4672:4672/udp" # ed2k udp
+      - "${AMULE_WEBUI_PORT}:4711" # web ui
+      - "${AMULE_REMOTE_GUI_PORT}:4712" # remote gui, webserver, cmd ...
+      - "${AMULE_ED2K_TCP_PORT}:4662" # ed2k tcp
+      - "${AMULE_ED2K_SEARCH_UDP_PORT}:4665/udp" # ed2k global search udp (tcp port +3)
+      - "${AMULE_ED2K_UDP_PORT}:4672/udp" # ed2k udp
     volumes:
       - ${AMULE_CONFIG_PATH}:/home/amule/.aMule
       - ${AMULE_DOWNLOAD_PATH}:/incoming
