--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - MOD_AUTO_SHARE_ENABLED=${MOD_AUTO_SHARE_ENABLED}
       - MOD_AUTO_SHARE_DIRECTORIES=${MOD_AUTO_SHARE_DIRECTORIES}
       - MOD_FIX_KAD_GRAPH_ENABLED=${MOD_FIX_KAD_GRAPH_ENABLED}
-      - MOD_FIX_KAD_BOOTSTRAP_ENABLED=true
+      - MOD_FIX_KAD_BOOTSTRAP_ENABLED=${MOD_FIX_KAD_BOOTSTRAP_ENABLED}
     ports:
       - "${AMULE_WEBUI_PORT}:4711" # web ui
       - "${AMULE_REMOTE_GUI_PORT}:4712" # remote gui, webserver, cmd ...
