Añadir un tema adaptable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   amule:
-    image: ngosang/amule
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: amule
     environment:
       - PUID=${PUID}
