Acelerar la parada del contenedor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: amule
+    init: true
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
